<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/lay5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strOne" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/strTwo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button2"
            android:text="@string/strThree" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/strFour" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay5"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strFive" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button5"
            android:text="@string/strSix" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button6"
            android:text="@string/strSeven" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strEight" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button8"
            android:text="@string/strNine" />
    </LinearLayout>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:text="@string/strZero" />
    <!-- SECOND PART -->

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button0"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strOne" />

        <Button
            android:id="@+id/button2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button1_2"
            android:text="@string/strTwo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay3"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strThree" />

        <Button
            android:id="@+id/button4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button3_2"
            android:text="@string/strFour" />

        <Button
            android:id="@+id/button5_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button4_2"
            android:text="@string/strFive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay4"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button6_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay4"
            android:text="@string/strSix" />

        <Button
            android:id="@+id/button7_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay4"
            android:layout_toRightOf="@+id/button6_2"
            android:text="@string/strSeven" />

        <Button
            android:id="@+id/button8_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay4"
            android:layout_toRightOf="@+id/button7_2"
            android:text="@string/strEight" />

        <Button
            android:id="@+id/button9_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay4"
            android:layout_toRightOf="@+id/button8_2"
            android:text="@string/strNine" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay6"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorRed" />

    <ImageButton
        android:id="@+id/imageButtonHomeOnActivity2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home" />

    <ImageButton
        android:id="@+id/imageButtonNextOnActivity2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/next" />

    <ImageButton
        android:id="@+id/imageButtonPreviousOnActivity2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/imageButtonNextOnActivity2"
        android:background="@drawable/previous" />

    <ImageButton
        android:id="@+id/imageButtonExitOnActivity2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/exit" />

</RelativeLayout>